cycle 2 problem reversed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "cmath": "cpp",
-        "iostream": "cpp",
-        "*.tcc": "cpp"
+        "ostream": "cpp"
     }
 }
